--- a/style.css
+++ b/style.css
@@ -3,53 +3,54 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #222; /* Dark background color */
-    font-family: 'Digital', Arial, Helvetica, sans-serif; /* Digital font for a futuristic look */
+    background-color: #f5f5f5;
+    font-family: 'Digital'Arial, Helvetica, sans-serif;
     font-weight: normal;
-    margin: 0; /* Remove default margin for full-page display */
+    padding: 50px;
+    
+    background-color: #333;
+    color: #f5f5f5;
 }
 
-.clock {
-    width: 300px; /* Adjust the clock's width to your liking */
+#clock {
+    font-size: 36px;
+    color: #333;
+    width: 450px;
+}
+.inside {width: 100%;
+    background-color: #222;
+    padding: 35px 0;
     text-align: center;
 }
-
 .days-of-week {
-    color: #aaa; /* Light gray for non-active days */
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    font-size: 1.2rem; /* Slightly larger font size */
+  color: #ffffff33;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  font-size: 1rem;
 }
-
 .active {
-    color: #f5f5f5; /* White for the active day */
-    font-weight: bold; /* Bold text for active day */
+    color: #f5f5f5;
 }
-
 .time {
-    font-size: 2.5em; /* Larger font size for the time */
+    font-size: 2.2em;
     margin-top: 10px;
 }
-
-#ampm {
+#ampm{
     font-size: 1.5rem;
 }
-
-.date {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    margin-top: 20px; /* Slightly reduce the margin */
+.date{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   gap: 10px;
+   margin-top: 35px
 }
-
 .icon img {
-    width: 30px;
-    height: 30px; /* Square icon size for consistency */
+  width: 30px;
+  height: З0px;
 }
-
-.day {
-    font-size: 1.5rem;
-    margin-right: 10px;
+.day{
+font-size: 1.5rem;
+margin-right: 10px;
 }
